# gifts-offering

./: .gitignore  README.md  biome.json  bun.lockb  graphql.config.yml  nuxt.config.ts  package.json  render.yaml  schema.graphql
.run/: code-format-and-validate.sh.run.xml  graphql-schema-gen.sh.run.xml  makemigrations.run.xml  migrate.run.xml  server.run.xml
client/: biome.json  bun.lockb  graphql.config.yml  nuxt.config.ts  package.json
client/graphql/: fragment-masking.ts  gql.ts  graphql.ts  schema.graphql
client/src/: appQueries.ts  codegen.ts
client/src/components/: GiftCard.tsx  Homepage.tsx  LoginForm.tsx  NavBar.tsx  points-limit-toast.scss
client/src/components/index/: GiftCard.tsx  GiftOrderConfirmationModal.tsx  Index.tsx  PointsIgnoreModal.tsx
client/src/components/index/GiftCard/: ConfirmPointsIgnoreModal.tsx  GiftCard.tsx  GiftCardDescription.tsx  GiftCardFitConfidence.tsx  GiftCardImages.tsx  OrderAmountInput.tsx  types.ts
client/src/components/index/GiftCard/GiftCardActions/: GiftCardActions.tsx  OrderAmountInput.tsx  OrderConfirmModal.tsx
client/src/components/login/: Login.tsx
client/src/composables/: useAuth.ts  useNotify.ts  useOrders.ts
client/src/layouts/: default.tsx
client/src/modules/apollo/: index.ts
client/src/modules/chakra/: index.ts
client/src/modules/chakra/components/: CSkeleton.tsx
client/src/pages/: index.tsx  login.tsx
client/src/plugins/: sentry.ts  swiper.ts  vue-toastification.ts
client/src/utils/: vModel.tsx
docs/: git-commit.md
graphql/: fragment-masking.ts  gql.ts  graphql.ts  schema.graphql
scripts/: code-format-and-validate.sh  graphql-schema-gen.sh
server/: .gitignore  manage.py  pyproject.toml
server/gifts/: asgi.py  schema.py  settings.py  urls.py
server/gifts/apps/auth/: admin.py  apps.py  forms.py  models.py  schema.py  types.py
server/gifts/apps/auth/graphql/: mutations.py  types.py
server/gifts/apps/auth/migrations/: 0001_initial.py  0002_user_points.py  0003_alter_user_points.py
server/gifts/apps/auth/static/auth/: auth.css
server/gifts/apps/auth/templates/account/: base.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  signup.html
server/gifts/apps/gifts/: admin.py  models.py
server/gifts/apps/gifts/graphql/: mutations.py  mutations_test.py  query.py  types.py
server/gifts/apps/gifts/migrations/: 0001_initial.py  0002_add_field_status.py  0003_alter_order_to_o2o.py  0004_add_field_gift_order_amount.py  0005_alter_gift_points_decimal.py  0006_alter_field_gift_order_status_and_more.py  0007_remove_gift_image_card_and_more.py  0008_remove_field_is_primary.py
server/gifts/graphql/: schema.py  schema_with_error_logging.py
server/gifts/utils/: gen.py  send_email.py  sentry.py  test_cases.py
src/: app.tsx  codegen.ts
src/components/: LoginForm.tsx
src/layouts/: default.tsx
src/pages/: index.tsx
src/utils/: vModel.tsx
supabase/: config.toml  database.types.ts
